[chromium] Re-enable gesture highlight layout tests, fix GestureLongPress regression. https://bugs.webkit.org/show_bug.cgi?id=99632

Reviewed by James Robinson.

Re-enable layout tests for gesture highlights. Includes fix for GestureTapCancel test.

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::handleGestureEvent):

LayoutTests:

* platform/chromium-linux/compositing/gestures/gesture-tapHighlight-simple-longPress.html:
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/117759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131823 268f45cc-cd09-0410-ab3c-d52691b4dbfc